# stk

./: Cargo.toml  README.md  in.c  main.hex  out.hex  rust-toolchain.toml  rustfmt.toml
crates/stk_core/: main.hex
crates/stk_core/src/: hex.rs
crates/stk_hd44780_vm/: Cargo.toml
crates/stk_hd44780_vm/src/: cgrom.py  lib.rs
crates/stk_macro/: Cargo.toml
crates/stk_macro/src/: bitmaskeq.rs  lib.rs  struct_map.rs
crates/stk_pic_vm/: Cargo.toml
crates/stk_pic_vm/src/: hex.rs  inst.rs  main.rs
crates/stk_pic_vm/src/vm/: mod.rs  p16f88.rs
crates/stk_web/: .gitignore  Cargo.toml  Justfile  README.md  Trunk.toml  index.html  websys-features  websys.py
crates/stk_web/src/: app.rs  main.rs
crates/stk_web_minifier/: Cargo.toml  Justfile  package.json
crates/stk_web_minifier/src/: lib.rs  opt_js.rs  symbol.rs
crates/stk_web_minifier/src/sys/: mod.rs
crates/stk_web_minifier_macro/: Cargo.toml
src/: hex.rs  inst.rs  lib.rs  main.rs
src/vm/: mod.rs  register_map.py
tests/: decode.rs
