[package]
name = "stk_pic_vm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayvec = "0.7.2"
bitflags = "2.3.2"
casey = "0.3.3"
concat-idents = "1.1.5"
env_logger = "0.10.0"
log = "0.4.17"
thiserror = "1.0.40"
