[package]
name = "stk-pic-vm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayvec = "0.7.2"
bitflags = "2.3.2"
casey = "0.3.3"
clap = { version = "4.3.19", features = ["derive"] }
concat-idents = "1.1.5"
thiserror = "1.0.40"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"

stk-hd44780-vm = { path = "../stk_hd44780_vm" }
