[package]
name = "stk-pic-vm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayvec = "0.7.4"
bitflags = "2.4.2"
casey = "0.4.0"
clap = { version = "4.4.18", features = ["derive"] }
concat-idents = "1.1.5"
thiserror = "1.0.56"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

stk-hd44780-vm = { path = "../stk_hd44780_vm" }
stk-macro = { path = "../stk_macro" }
