[package]
name = "stk_web"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
js-sys = "0.3"
once_cell = "1.18.0"
stylist = { version = "0.12", features = ["yew_integration"] }
time = { version = "0.3", features = ["wasm-bindgen"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["time"] }
tracing-web = "0.1"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["HtmlCanvasElement", "CanvasRenderingContext2d"] }
yew = { version = "0.20", features = ["csr"] }
