[package]
name = "stk-web"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console_error_panic_hook = "0.1"
derive_more = "0.99.17"
gloo = "0.11"
js-sys = "0.3.67"
ordered-float = "4.2.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tracing-web = "0.1.3"
wasm-bindgen-futures = "0.4"
wasm-logger = "0.2"
web-sys = { version = "0.3.67", features = [
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "MouseEvent",
    "DomRect",
    "Element",
    "ResizeObserver",
    "ResizeObserverEntry",
    "TextMetrics",
    "CssStyleDeclaration",
] }
