[package]
name = "stk-web-minifier"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0"
console_error_panic_hook = "0.1"
dotenv = "0.15"
hex = "0.4"
js-sys = "0.3"
once_cell = "1.19"
sha2 = "0.10"
time = { version = "0.3", features = ["wasm-bindgen"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["time"] }
tracing-web = "0.1"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
wasm-encoder = { version = "0.39", features = ["wasmparser"] }
wasmparser = "0.119"
web-sys = { version = "0.3", features = ["console"] }

# this crate is not direcrly depending on this crate, but
# we need "js" feature to build WASM.
getrandom = { version = "0.2", features = ["js"] }

[dependencies.swc_core]
version = "0.87"
features = ["common", "ecma_ast", "ecma_codegen", "ecma_parser", "ecma_visit"]
